apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres
  namespace: paperless
spec:
  selector:
    app: paperless-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-broker
  namespace: paperless
spec:
  selector:
    app: paperless-broker
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
